--- a/css/banter.css
+++ b/css/banter.css
@@ -215,7 +215,6 @@ td {
 
 #mainZone a, #mainZone a:link, #mainZone a:visited,
 #footer a, #footer a:link, #footer a:visited {
-  background: inherit;
   color: #52b2ad;
 }
 
@@ -257,10 +256,6 @@ input[type="radio"], input[type="checkbox"] {
 
 #logo img {
   border-bottom: 1px solid #95bbae;
-}
-
-#mainZone h1 img, #mainZone h2 img, #mainZone h3 img, #mainZone h4 img, #mainZone h5 img {
-  vertical-align: middle;
 }
 
 #mainZone h1, #mainZone h2, #mainZone h3, #mainZone h4, #mainZone h5 {
@@ -349,6 +344,12 @@ hr {
   background-position: center left;
 }
 
+.bigIcon {
+  margin-top: 5px;
+  padding: 20px 0 20px 65px;
+  background-position: center left;
+}
+
 .dumpIcon {
   background: url(../images/dumps.png) no-repeat;
 }
@@ -379,4 +380,12 @@ hr {
 
 .searchIcon {
   background: url(../images/search.png) no-repeat;
+}
+
+.medicalIcon {
+  background: url(../images/medical.png) no-repeat;
+}
+
+.adminIcon {
+  background: url(../images/admin.png) no-repeat;
 }
