--- a/css/banter.css
+++ b/css/banter.css
@@ -1,5 +1,5 @@
 /* CSS based in SuperfluousBanter.org site */
-/* $id$ */
+/* $Id: banter.css,v 1.9 2005/08/22 15:50:43 jact Exp $ */
 
 /* Layout */
 html, body {
@@ -219,6 +219,50 @@ td {
 }
 
 /* Form styles */
+fieldset {
+  border: 5px double #E0EDE9;
+  border-right: none;
+  border-left: none;
+  margin: 8px auto;
+  padding: 5px;
+}
+
+fieldset p {
+  margin: 12px 0px;
+}
+
+fieldset .formButton {
+  margin: 16px 0;
+  text-align: center;
+}
+
+fieldset .error {
+  display: block;
+  margin: 2px 0 16px;
+  border-bottom: 1px solid #9c0000;
+}
+
+legend {
+  border: 3px solid #E0EDE9;
+  border-top: none;
+  border-bottom: none;
+  padding: 0 5px;
+  font-weight: bold;
+}
+
+fieldset label {
+  display: block;
+  width: 40%;
+  float: left;
+  text-align: right;
+  padding-right: 5px;
+  cursor: pointer;
+}
+
+fieldset.largeArea label {
+  width: 25%;
+}
+
 input, textarea, select {
   font-family: verdana, sans-serif;
   font-size: 12px;
@@ -229,14 +273,19 @@ input, textarea, select {
 }
 
 input:focus, textarea:focus, select:focus {
-  background: #fffbff;
-  color: #000;
+  background: #000;
+  color: #fffbff;
 }
 
 input[type="submit"], input[type="button"], input[type="reset"] {
   border-width: 1px;
   font-weight: bold;
   background: #eff7f7;
+  margin: 2px 10px;
+}
+
+input[type="submit"], .formButton input:first-child {
+  padding: 4px;
 }
 
 input[type="radio"], input[type="checkbox"] {
