--- a/css/gazetteer_alt.css
+++ b/css/gazetteer_alt.css
@@ -1,5 +1,5 @@
 /* CSS based in Gazetteer Alternate (haran's design in oswd.org) */
-/* $Id: gazetteer_alt.css,v 1.9 2005/08/16 15:24:46 jact Exp $ */
+/* $Id: gazetteer_alt.css,v 1.10 2005/08/22 15:50:43 jact Exp $ */
 
 html, body {
   background: #fff;
@@ -273,6 +273,49 @@ td, th {
 }
 
 /* Form styles */
+fieldset {
+  border: 1px solid #dc143c;
+  border-left: none;
+  margin: 8px auto;
+  padding: 5px;
+}
+
+fieldset p {
+  margin: 12px 0px;
+}
+
+fieldset .formButton {
+  margin: 16px 0;
+  text-align: center;
+}
+
+fieldset .error {
+  display: block;
+  margin: 2px 0 16px;
+  border-bottom: 1px solid #D2691E;
+}
+
+legend {
+  border: 1px solid #dc143c;
+  border-right: none;
+  border-left: none;
+  padding: 0 5px;
+  font-weight: bold;
+}
+
+fieldset label {
+  display: block;
+  width: 40%;
+  float: left;
+  text-align: right;
+  padding-right: 5px;
+  cursor: pointer;
+}
+
+fieldset.largeArea label {
+  width: 25%;
+}
+
 input, textarea, select {
   border-width: 1px;
   border-color: #dce0d3;
@@ -288,10 +331,11 @@ input:focus, textarea:focus, select:focus {
 input[type="submit"], input[type="button"], input[type="reset"] {
   border-width: 1px;
   font-weight: bold;
+  margin: 2px 10px;
 }
 
-label {
-  cursor: pointer;
+input[type="submit"], .formButton input:first-child {
+  padding: 4px;
 }
 
 .requiredField {
