--- a/css/sinorca.css
+++ b/css/sinorca.css
@@ -1,5 +1,5 @@
 /* CSS based in Sinorca (haran's design in oswd.org) */
-/* $Id: sinorca.css,v 1.6 2005/08/16 15:24:46 jact Exp $ */
+/* $Id: sinorca.css,v 1.7 2005/08/22 15:50:43 jact Exp $ */
 
 html, body {
   background: #fff;
@@ -120,6 +120,10 @@ li#first a, li#first span {
   background: #F7F3F7;
   color: #000;
   border-right: 1px solid #9C9A9C;
+  border-bottom: 1px solid #9C9A9C;
+}
+
+#sideBarLogo {
   border-bottom: 1px solid #9C9A9C;
 }
 
@@ -317,6 +321,50 @@ td, th {
 }
 
 /* Form styles */
+fieldset {
+  border: 1px solid #9C9A9C;
+  background: #F7F3F7;
+  color: #000;
+  margin: 8px auto;
+  padding: 5px;
+}
+
+fieldset p {
+  margin: 12px 0px;
+}
+
+fieldset .formButton {
+  margin: 16px 0;
+  text-align: center;
+}
+
+fieldset .error {
+  display: block;
+  margin: 2px 0 16px;
+  border-bottom: 1px solid #D2691E;
+}
+
+legend {
+  background: #F7F3F7;
+  color: #6386DE;
+  border: 1px solid #6386DE;
+  padding: 0 5px;
+  font-weight: bold;
+}
+
+fieldset label {
+  display: block;
+  width: 40%;
+  float: left;
+  text-align: right;
+  padding-right: 5px;
+  cursor: pointer;
+}
+
+fieldset.largeArea label {
+  width: 25%;
+}
+
 input, textarea, select {
   border-width: 1px;
   border-color: #dce0d3;
@@ -332,10 +380,11 @@ input:focus, textarea:focus, select:focus {
 input[type="submit"], input[type="button"], input[type="reset"] {
   border-width: 1px;
   font-weight: bold;
+  margin: 2px 10px;
 }
 
-label {
-  cursor: pointer;
+input[type="submit"], .formButton input:first-child {
+  padding: 4px;
 }
 
 .requiredField {
