--- a/css/gazetteer_alt.css
+++ b/css/gazetteer_alt.css
@@ -1,5 +1,5 @@
 /* CSS based in Gazetteer Alternate (haran's design in oswd.org) */
-/* $Id: gazetteer_alt.css,v 1.10 2005/08/22 15:50:43 jact Exp $ */
+/* $Id: gazetteer_alt.css,v 1.11 2006/04/10 19:05:27 jact Exp $ */
 
 html, body {
   background: #fff;
@@ -123,7 +123,7 @@ img {
   font-family: "trebuchet ms", verdana, helvetica, arial, sans-serif;
 }
 
-#sideBar hr {
+#skipLink, hr {
   display: none;
 }
 
@@ -361,7 +361,8 @@ input[type="submit"], .formButton input:first-child {
   font-weight: bold;
 }
 
-hr {
+#mainZone hr {
+  display: block;
   background: #9C9A9C;
   color: #9C9A9C;
   border: 1px solid #9C9A9C;
