--- a/css/banter.css
+++ b/css/banter.css
@@ -1,5 +1,5 @@
 /* CSS based in SuperfluousBanter.org site */
-/* $Id: banter.css,v 1.10 2006/04/10 19:05:27 jact Exp $ */
+/* $Id: banter.css,v 1.11 2006/04/10 19:54:04 jact Exp $ */
 
 /* Layout */
 html, body {
@@ -236,7 +236,7 @@ fieldset .formButton {
   text-align: center;
 }
 
-fieldset .error {
+fieldset span.error {
   display: block;
   margin: 2px 0 16px;
   border-bottom: 1px solid #9c0000;
@@ -291,6 +291,10 @@ input[type="submit"], .formButton input:first-child {
 input[type="radio"], input[type="checkbox"] {
   background: #000;
   color: inherit;
+}
+
+input.error, textarea.error, select.error {
+  border: 3px solid #9c0000;
 }
 
 /* Miscellaneous */
