--- a/css/gazetteer_alt.css
+++ b/css/gazetteer_alt.css
@@ -1,5 +1,5 @@
 /* CSS based in Gazetteer Alternate (haran's design in oswd.org) */
-/* $Id: gazetteer_alt.css,v 1.12 2006/04/10 19:54:04 jact Exp $ */
+/* $Id: gazetteer_alt.css,v 1.13 2006/10/13 19:59:24 jact Exp $ */
 
 html, body {
   background: #fff;
@@ -390,43 +390,43 @@ input.error, textarea.error, select.error {
 }
 
 .dumpIcon {
-  background: url(../images/dumps.png) no-repeat;
+  background: url(../img/dumps.png) no-repeat;
 }
 
 .logIcon {
-  background: url(../images/logs.png) no-repeat;
+  background: url(../img/logs.png) no-repeat;
 }
 
 .configIcon {
-  background: url(../images/config_clinic.png) no-repeat;
+  background: url(../img/config_clinic.png) no-repeat;
 }
 
 .staffIcon {
-  background: url(../images/staff.png) no-repeat;
+  background: url(../img/staff.png) no-repeat;
 }
 
 .themeIcon {
-  background: url(../images/themes.png) no-repeat;
+  background: url(../img/themes.png) no-repeat;
 }
 
 .userIcon {
-  background: url(../images/users.png) no-repeat;
+  background: url(../img/users.png) no-repeat;
 }
 
 .patientIcon {
-  background: url(../images/patient.png) no-repeat;
+  background: url(../img/patient.png) no-repeat;
 }
 
 .searchIcon {
-  background: url(../images/search.png) no-repeat;
+  background: url(../img/search.png) no-repeat;
 }
 
 .medicalIcon {
-  background: url(../images/medical.png) no-repeat;
+  background: url(../img/medical.png) no-repeat;
 }
 
 .adminIcon {
-  background: url(../images/admin.png) no-repeat;
+  background: url(../img/admin.png) no-repeat;
 }
 
 /* clearfix */
