--- a/css/serialz.css
+++ b/css/serialz.css
@@ -1,5 +1,5 @@
 /* CSS based in www.serialz.to site */
-/* $Id: serialz.css,v 1.16 2006/10/13 19:59:24 jact Exp $ */
+/* $Id: serialz.css,v 1.17 2006/12/14 22:37:07 jact Exp $ */
 
 /* Layout */
 html, body {
@@ -231,7 +231,7 @@ fieldset {
   padding: 5px;
 }
 
-fieldset p {
+fieldset div {
   margin: 12px 0px;
 }
 
@@ -303,6 +303,18 @@ input[type="radio"], input[type="checkbox"] {
 
 input.error, textarea.error, select.error {
   border: 3px solid #374611;
+}
+
+fieldset#dumpTables {
+  margin-right: 1em;
+  width: 35%;
+  float: left;
+}
+
+fieldset#dumpOptions label,
+fieldset#dumpExtended label {
+  display: inline;
+  float: none;
 }
 
 /* Miscellaneous */
