--- a/css/serialz.css
+++ b/css/serialz.css
@@ -1,5 +1,5 @@
 /* CSS based in www.serialz.to site */
-/* $Id: serialz.css,v 1.17 2006/12/14 22:37:07 jact Exp $ */
+/* $Id: serialz.css,v 1.18 2007/01/15 22:37:33 jact Exp $ */
 
 /* Layout */
 html, body {
@@ -79,6 +79,9 @@ li#first a, li#first span {
   background: #bbc2a9;
   color: #f5f5dc;
   border-bottom: 1px solid #bbc2a9;
+  padding-bottom: 2px;
+  position: relative;
+  top: 1px;
 }
 
 #sourceForgeLinks {
@@ -87,7 +90,7 @@ li#first a, li#first span {
   background: #bbc2a9;
   color: #f5f5dc;
   padding: 4px 2ex 4px 0;
-  margin: -1px 0 0 0;
+  margin: 0;
   border: 1px solid #dce0d3;
 }
 
