--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,9 @@
  * Licensed under the GNU GPL. For full terms see the file LICENSE.
  *
  * @package   OpenClinic
- * @copyright 2002-2006 jact
+ * @copyright 2002-2007 jact
  * @license   http://www.gnu.org/copyleft/gpl.html GNU GPL
- * @version   CVS: $Id: style.css,v 1.17 2006/10/13 20:00:46 jact Exp $
+ * @version   CVS: $Id: style.css,v 1.18 2007/12/15 14:26:38 jact Exp $
  * @author    jact <jachavar@gmail.com>
  */
 
@@ -16,70 +16,90 @@ html {
   background: #fff;
   color: #000;
 }
+
 body {
-  font-family: "Trebuchet MS", trebuchet, verdana, helvetica, arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  background: #efefef;
+  margin: 1em;
   border: 1px solid #98aab1;
   padding: 1em;
-  margin: 1em;
+  background: #efefef;
+  color: #000;
+  font-family: "Trebuchet MS", trebuchet, verdana, helvetica, arial, sans-serif;
+  font-size: 90%;
   line-height: 150%;
 }
+
 img {
   border: none;
 }
+
 table {
-  font-size: 14px;
+  font-size: 100%;
 }
+
 li {
   padding-top: 1em;
 }
-h1 {
-  font-size: 22px;
+
+fieldset {
+  border: none;
+  padding: 0;
+  line-height: 200%;
 }
-h2 {
-  font-size: 18px;
-  font-weight: normal;
+
+legend {
+  display: block;
+  font-size: 120%;
 }
-h3 {
-  font-size: 16px;
-}
+
 #content a:link, #content a:visited, #footer a:link, #footer a:visited {
   background: inherit;
   color: #00a;
 }
+
 #content a:hover, #footer a:hover {
   background: #00a;
   color: #fff;
 }
-.note, .advice {
+
+.note, .advice, .warning {
   background: inherit;
   color: #dc143c;
   font-weight: bold;
 }
+
+.info {
+  background: inherit;
+  color: #2ABB31;
+  font-weight: bold;
+}
+
 .error {
   background: inherit;
   color: #f00;
-  font-size: 18px;
+  font-size: 110%;
 }
+
 .add {
   background: inherit;
   color: #f30;
 }
+
 .fix {
   background: inherit;
   color: #14a5f4;
   font-weight: bold;
 }
+
 .change {
   background: inherit;
   color: #13920d;
 }
+
 .noteCode {
   padding: 10px;
   border: 2px solid #dc143c;
 }
+
 .programlisting {
   padding-right: 10px;
   padding-left: 20px;
@@ -87,84 +107,99 @@ h3 {
   border: 1px solid #87ceeb;
   overflow: auto;
 }
+
 hr {
   background: #000;
   color: #000;
   border: 1px solid #000;
 }
+
 #menu ul, #extra ul {
   list-style: none outside none;
   margin: 0 0 0 3px;
   padding: 0;
 }
+
 html>body #menu ul, html>body #extra ul { /* be nice with Opera */
   list-style: none;
 }
+
 #menu li, #extra li {
   margin: 0;
   padding: 0;
 }
+
 html>body #menu li, html>body #extra li {
   margin: 0 3px 0 0;
   padding: 2px 0px;
   line-height: 1.5em;
 }
+
 #menu li a, #menu li a:link, #menu li a:visited,
 #extra li a, #extra li a:link, #extra li a:visited {
+  display: block;
+  position: relative;
+  right: 2px;
+  bottom: 2px;
+  width: 11em;
+  margin: 0;
+  border: 1px solid #fff;
+  padding: 0px 5px;
   background: #98aab1;
   color: #fff;
-  border: 1px solid #fff;
   cursor: pointer;
-  display: block;
-  margin: 0;
-  padding: 0px 5px;
-  position: relative;
-  bottom: 2px;
-  right: 2px;
-  width: 11em;
   text-decoration: none;
 }
+
 #menu li strong, #extra li strong {
   background: #98aab1;
   color: #ffd700;
   font-weight: bold;
 }
+
 #menu a:focus, #extra a:focus {
-  background: #00a;
-  color: #fff;
-  bottom: 1px;
   position: relative;
   right: 1px;
-}
-#menu a:active, #extra a:active {
-  background: #999;
+  bottom: 1px;
+  background: #00a;
   color: #fff;
-  bottom: 0;
+}
+
+#menu a:active, #extra a:active {
   position: relative;
   right: 0;
+  bottom: 0;
+  background: #999;
+  color: #fff;
 }
+
 #footer {
-  font-size: 11px;
   margin-top: 10px;
+  font-size: 80%;
   text-align: center;
 }
+
 #footer p {
   margin: 0;
 }
+
 kbd {
   font-weight: bold;
 }
+
 /* -~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
 #content {
   padding: 0em 14em 1em 14em;
 }
+
 #menu {
   position: fixed;
   top: 1.1em;
-  left: 1.8em;
+  left: 1.7em;
   width: 12em;
   background: #eee;
 }
+
 #extra {
   position: fixed;
   top: 1.1em;
@@ -172,53 +207,63 @@ kbd {
   width: 12em;
   background: #eee;
 }
+
 #menu h2, #extra h2 {
   margin: 10px 0 3px 0;
 }
+
 /* MSIE only rules */
 * html #menu, * html #extra {
   position: absolute;
 }
+
 * html #menu {
   left: 1.1em;
 }
+
 * html #menu h2 {
   margin-left: 0.7em;
 }
+
 * html #menu ul {
   margin-left: 1em;
 }
+
 * html #menu li {
   margin-bottom: 2px;
 }
 /* All done. */
+
 /* Images replacements */
 #logo { /* variation of phark ir method */
   display: block;
-  border: 1px solid #000;
-  text-indent: -5000px;
-  text-decoration: none;
-  background: url(../img/openclinic-3.png) no-repeat;
   width: 190px;
   height: 38px;
+  border: 1px solid #000;
+  background: url(../img/openclinic-3.png) no-repeat;
+  text-indent: -5000px;
+  text-decoration: none;
 }
+
 #hosting { /* variation of phark ir method */
   display: block;
-  border: 1px solid #fff;
-  text-indent: -5000px;
-  text-decoration: none;
-  background: url(../img/sf-logo.png) no-repeat;
   width: 125px;
   height: 37px;
-}
-#footer a#xhtml11, #footer a#xhtml11:hover { /* variation of phark ir method */
-  display: block;
+  border: 1px solid #fff;
+  background: url(../img/sf-logo.png) no-repeat;
   text-indent: -5000px;
   text-decoration: none;
-  background: url(../img/valid-xhtml11.png) no-repeat;
+}
+
+#footer a#xhtml11, #footer a#xhtml11:hover { /* variation of phark ir method */
+  display: block;
   width: 80px;
   height: 15px;
+  background: url(../img/valid-xhtml11.png) no-repeat;
+  text-indent: -5000px;
+  text-decoration: none;
 }
+
 html>body a#xhtml11 { /* gecko browsers */
   margin-left: 46%;
   border: 1px solid #000;
@@ -226,18 +271,19 @@ html>body a#xhtml11 { /* gecko browsers */
 
 /* Specific styles for view source code */
 #viewSource {
-  background: #fff;
-  color: inherit;
   border: 0;
   padding: 0;
+  background: #fff;
+  color: inherit;
 }
+
 #viewSource code {
   white-space: pre;
 }
 
 /* Specific styles for print medical record */
 #medicalRecord {
-  background: #fff;
   border: 0;
   padding: 0;
+  background: #fff;
 }
