--- a/css/openclinic.css
+++ b/css/openclinic.css
@@ -6,9 +6,9 @@
  * Licensed under the GNU GPL. For full terms see the file LICENSE.
  *
  * @package   OpenClinic
- * @copyright 2002-2007 jact
+ * @copyright 2002-2013 jact
  * @license   http://www.gnu.org/copyleft/gpl.html GNU GPL
- * @version   CVS: $Id: openclinic.css,v 1.2 2007/12/23 13:20:21 jact Exp $
+ * @version   CVS: $Id: openclinic.css,v 1.3 2013/01/07 18:15:32 jact Exp $
  * @author    jact <jachavar@gmail.com>
  */
 
@@ -69,14 +69,17 @@ html, body {
 #tabs ul {
   background: #51728D;
   color: #fff;
+  height: 2.5em;
 }
 
 #tabs li {
-  display: inline;
+  float: left;
   line-height: 2em;
+  list-style-type: none;
 }
 
 #tabs li a {
+  display: block;
   border-right: 1px solid #3a5266;
   padding: 0.4em 1.5em 0.4em;
   background: inherit;
@@ -85,7 +88,7 @@ html, body {
 }
 
 #tabs a.first.selected {
-  border-left: 1px solid #ebf3fa;
+  border-right: 1px solid #ebf3fa;
 }
 
 #tabs li a:hover,
@@ -95,8 +98,8 @@ html, body {
 }
 
 #tabs a.selected {
+  border: 1px solid #EBF3FA;
   border-bottom: 6px solid #EBF3FA;
-  border-left: 1px solid #EBF3FA;
   background: #EBF3FA;
   color: #51728d;
   font-weight: bold;
