--- a/css/print.css
+++ b/css/print.css
@@ -6,9 +6,9 @@
  * Licensed under the GNU GPL. For full terms see the file LICENSE.
  *
  * @package   OpenClinic
- * @copyright 2002-2007 jact
+ * @copyright 2002-2013 jact
  * @license   http://www.gnu.org/copyleft/gpl.html GNU GPL
- * @version   CVS: $Id: print.css,v 1.6 2007/12/01 12:50:42 jact Exp $
+ * @version   CVS: $Id: print.css,v 1.7 2013/01/12 22:43:57 jact Exp $
  * @author    jact <jachavar@gmail.com>
  */
 
@@ -59,7 +59,15 @@ a[href^="http"]:after, a[href^="mailto"]:after {
   content: " (link: " attr(href) ")";
 }
 
-#skip_navigation, #shortcuts, #tabs, #navigation, #logos, #sf_links, #mini_logos, hr {
+#skip_navigation,
+#shortcuts,
+#tabs,
+#navigation,
+#logos,
+#sf_links,
+#mini_logos,
+#doc_links,
+hr {
   display: none;
   visibility: hidden;
 }
